# dbt-opiner-custom-opinions

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: pre_commit_and_pytest_flow.yml
custom_opinions/: BQ002_bigquery_tables_should_have_clustering.py  BQ004_bigquery_models_must_persist_docs.py  C001_facts_and_dimensions_should_be_plural.py  C002_yaml_docs_should_have_only_one_model.py  C003_model_column_descriptions_should_use_doc_macro.py  C004_project_must_not_send_anon_stats.py  C007_pii_columns_should_have_tags.py  C008_bigquery_targets_must_have_maximum_bytes_billed.py  C009_layer_x_must_not_select_from_layer_y.py  C011_bigquery_views_must_have_partition_and_cluster_description.py  D002_docs_mds_should_contain_only_one_definition.py  D003_model_column_descriptions_must_use_doc_macro.py  L001_sources_must_only_be_used_in_staging.py  M001_facts_and_dimensions_should_be_plural.py  P001_project_must_not_send_anon_stats.py
shared_config/: .dbt-opiner.yaml
tests/: conftest.py  test_C001.py  test_M001.py
