[tool.poetry]
name = "dbt-opiner-custom-opinions"
version = "0.1.0"
description = "Custom opinions for dbt opiner"
authors=["Rodrigo Loredo <loredo.rod@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
loguru = "^0.7.2"
dbt-opiner = "^0.1.0b0"

[tool.poetry.dev-dependencies]
pre-commit = "^2"
pytest = "^7.4"
pytest-xdist = "^3.6.1"

[tool.poetry.group.test.dependencies]
pytest-cov = "^4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
