[tool.poetry]
name = "dbt-opiner-custom-opinions"
version = "0.1.0"
description = "Custom opinions for dbt opiner"
authors=["Rodrigo Loredo <loredo.rod@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
loguru = "^0.7.2"
dbt-opiner = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1"
pytest = "^7.4"
pre-commit = "^2"
pytest-xdist = "^3.6.1"
tox = "^4.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
  [tox]
  envlist = py310, py311, py312
  no_package = True

  [testenv]
  deps = poetry
  commands_pre =
    poetry lock --quiet
    poetry install --no-root --quiet
  commands = poetry run pytest
"""
